# Python_repository

./: .gitignore  4.py  5.py  AWSRegister.py  AWS_captchaImage.py  AWSsellerxt.py  AddtoCart.py  Amazozn_email.py  BFS.py  CUS_Yuntuexpress.py  CUSfee_Gspreed.py  DFS.py  Get_AmazonProducts_num.py  Get_Amazon_tag.py  Get_questions.py  Google_tranJS.py  Google_translate_js_API.py  HandleJs.py  Logistics_get_17track.py  PyAWS_Store_Reviews.py  README.md  Rename.py  amazon.py  amazon_cn.py  amazon_us.py  bilibili_ranking_data_everyday.py  captchaImg_sso.py  covid-19.py  csv_to_xls.py  dijkstra.py  dingTalkfile.py  get_dimensions.py  get_feedbacknum.py  get_img.py  get_ranks.py  keywords_find.py  pneumonia.py  pytree.txt
AWS/: .env.example  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  AWS_captchaImage.py  Amazon_Utils.py  Get_5_Features.py  Get_Amazon_Fulfillment.py  Get_Amazon_QA.py  Get_Amazon_bestsellers.py  Get_Amazon_keywords_rank.py  Get_Amazon_products_num.py  Get_Amazon_sales.py  Get_FBA_Package_Weight_Dimensions.py  Get_description.py  Get_questions.py  Is_Amz_videos.py  Makefile  PyAWS_Store_Reviews.py  README.md  Sellersprite.py  amazon.py  amazon_comments.py  freeproxies.py  get_feedbacknum.py  get_ppc.py  get_ranks.py  keywords_find.py  main.py  postTocart.py  price正则.txt  proxies.txt  pyproject.toml  requirement.txt  requirements.txt
AWS/.github/: pull_request_template.md
AWS/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
AWS/.github/workflows/: ci.yml
AWS/config/: rate_limits.yaml  settings.json  workflow_defaults.yaml
AWS/config/auth/: xiyou_default_token.json
AWS/config/lp_calibration/: _global.yaml
AWS/docs/: ARCHITECTURE.md  DEV_GUIDE.md  INPUT_SCHEMA.md  LLM_GUIDELINES.md  MCP_PROTOCOL.md  PR_GUIDELINES.md  TASK_DETAILS.md  TASK_DETAILS.md   TESTING.md  TROUBLESHOOTING.md
AWS/scripts/: deploy_claude_desktop.sh  deploy_ubuntu.sh  deploy_vultr.sh  generate_sellersprite_category_fallback.py  setup_amazon_ads.py  start_mcp_server.sh
AWS/src/agents/: base_agent.py  mcp_agent.py  session.py
AWS/src/agents/prompts/: mcp_agent_system.md  prompt_builder.py  tool_catalog_formatter.py
AWS/src/analysis/: sales_rank_regression.py  similarity.py
AWS/src/core/: data_cache.py  models.py  proxy.py  scraper.py
AWS/src/core/errors/: __init__.py  codes.py  exceptions.py
AWS/src/core/identity/: __init__.py  pool.py  strategy.py
AWS/src/core/models/: __init__.py  market.py  product.py  request.py  review.py
AWS/src/core/storage/: __init__.py  base.py  local_http.py  s3_compatible.py
AWS/src/core/telemetry/: tracker.py
AWS/src/core/utils/: account_helper.py  charts.py  config_helper.py  context.py  cookie_helper.py  csv_helper.py  decorators.py  parser_helper.py  proxy.py  rate_headers.py
AWS/src/entry/cli/: main.py
AWS/src/entry/feishu/: bot_listener.py  client.py  commands.py  const.py
AWS/src/extractors/: bestsellers.py  cart_stock.py  comments.py  dimensions.py  fba_info.py  feedback.py  fulfillment.py  images.py  keywords_rank.py  past_month_sales.py  product_details.py  products_num.py  ranks.py  review_count.py  sales.py  sellersprite.py  videos.py
AWS/src/gateway/: __init__.py  auth.py  rate_limit.py  router.py
AWS/src/integrations/sellersprite/: auth.py  client.py
AWS/src/integrations/xiyouzhaoci/: auth.py  client.py
AWS/src/intelligence/: dto.py  fallback.py
AWS/src/intelligence/parsers/: markdown_cleaner.py
AWS/src/intelligence/processors/: __init__.py  auto_mining.py  causal_analysis.py  comment_analyzer.py  hashtag_generator.py  listing_quality_scorer.py  lp_calibration.py  monopoly_analyzer.py  optimizer_ad_budget.py  optimizer_pricing.py  product_similarity.py  promo_analyzer.py  review_summarizer.py  sales_estimator.py  shipment_lead_time.py  social_virality.py
AWS/src/intelligence/prompts/: manager.py  review_analysis.yaml
AWS/src/intelligence/providers/: base.py  claude.py  deepseek.py  factory.py  gemini.py  llama_cpp.py  openai.py  price_manager.py
AWS/src/intelligence/router/: __init__.py
AWS/src/jobs/: __init__.py  batch_poller.py  signals.py
AWS/src/jobs/callbacks/: __init__.py  base.py  csv_callback.py  factory.py  feishu.py  mcp_callback.py
AWS/src/jobs/checkpoint/: __init__.py
AWS/src/jobs/interactions/: __init__.py  handlers.py  registry.py
AWS/src/jobs/manager/: __init__.py
AWS/src/mcp/: exceptions.py  server.py
AWS/src/mcp/client/: __init__.py  base.py  local.py
AWS/src/registry/: prompts.py  resources.py  tools.py
AWS/src/tasks/: analysis_tasks.py  asin_tasks.py  base_task.py  composite_tasks.py  factory.py  search_tasks.py  seller_tasks.py  url_tasks.py
AWS/src/utils/: account_helper.py  config_helper.py  cookie_helper.py  csv_helper.py
AWS/src/workflows/: __init__.py
AWS/src/workflows/config/: __init__.py
AWS/src/workflows/definitions/: __init__.py  ad_diagnosis.py  amazon_bsr.py  category_monopoly_analysis.py  cli_test.py  (+3 more)
AWS/tests/: analyze_ucla_formula.py  conftest.py  debug_api_cart.py  debug_cart.py  temp_collect_final.py  temp_test_bsr_extractor.py  test_ad_diagnosis_live.py  test_ad_diagnosis_report_export.py  test_ad_optimizer.py  test_ads_create_reports_live.py  test_agent_session.py  test_amazon_ads_full_bids.py  test_benchmark_report_live.py  test_beta_cvr_redis.py  test_calibration_concurrency.py  test_calibration_data_integrity.py  test_calibration_trigger_logic.py  test_causal_redis.py  test_checkpoint_resume.py  test_clustering_comparison.py  test_comments_filters_live.py  test_comments_with_login.py  test_cookie_fetcher.py  test_core_models.py  test_core_telemetry.py  test_core_utils.py  test_deal_history_debug.py  test_drission_review_waf.py  test_erp_ads_calibration.py  test_erp_shipment_lead_time.py  test_erp_sp_campaign_ad_report.py  test_feishu_artifact_callback.py  test_feishu_full_flow.py  test_feishu_integration_fixes.py  test_feishu_upload_actual.py  test_gemini_advanced_pricing.py  test_generate_charts_upload.py  test_identity_propagation.py  test_imports.py  test_intelligence_pricing.py  (+54 more)
(+292 files in other folders)
