[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-v2"
version = "2.0.0"
description = "Amazon Web Scraper V2 – Hybrid Intelligence Agentic Platform"
requires-python = ">=3.11"
dependencies = [
    # Core scraping & parsing
    "curl-cffi",
    "beautifulsoup4",
    "lxml",
    "DrissionPage",
    "aiohttp",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "matplotlib",

    # AI & intelligence
    "google-genai",
    "anthropic",
    "openai",
    "pyyaml",
    "jinja2",
    "llama-cpp-python",
    "redis",
    "google-api-core",

    # Analysis & data
    "scikit-learn",
    "numpy",
    "pandas",
    "causalimpact",
    "boto3",
    "markdown",
    "netcdf4",

    # Encryption
    "cryptography",

    # Protocol
    "mcp",

    # Integrations
    "lark-oapi",
    "ortools>=9.8.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pre-commit>=3.7",
    "ruff>=0.11",
    "bandit[toml]>=1.8",
    # Type stubs for runtime dependencies
    "boto3-stubs[s3]",
    "types-redis",
    "types-PyYAML",
    "types-beautifulsoup4",
    "types-Markdown",
    "pandas-stubs",
]

[project.scripts]
aws = "src.entry.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "live: requires live external API credentials or network access (deselect with '-m \"not live\"')",
    "redis: requires a running Redis instance with real cached data (deselect with '-m \"not redis\"')",
]

# ── mypy ──────────────────────────────────────────────────────────────────────
# Coverage scope: src/core/ (stable, well-typed foundation layer).
# Expand to src/gateway/, src/workflows/, etc. as annotations are added.
[tool.mypy]
python_version = "3.11"
mypy_path = "."                 # resolve `src.*` from project root
explicit_package_bases = true   # prevent double-discovery when run from root
ignore_missing_imports = true   # many third-party deps lack stubs
check_untyped_defs = true       # check bodies even without annotations
no_implicit_optional = true     # None must be explicit in Optional[X]
warn_redundant_casts = true
warn_unused_ignores = true

# Third-party packages with known partial or missing stubs — suppress noise
[[tool.mypy.overrides]]
module = [
    "curl_cffi.*",
    "DrissionPage.*",
    "lark_oapi.*",
    "google.genai.*",
    "google.api_core.*",
    "causalimpact.*",
    "llama_cpp.*",
    "netCDF4.*",
    "ortools.*",
    "mcp.*",
]
ignore_missing_imports = true

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["venv311", "models", "data", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long — handled by ruff-format
    "E402",   # module-level import not at top — many files use docstrings or sys.path before imports
    "B008",   # function calls in default args — common in Pydantic/FastAPI
    "SIM102", # nested if → combine with and — often less readable
    "SIM103", # return bool condition directly — sometimes explicit is clearer
    "SIM105", # contextlib.suppress — try/except/pass is often more readable
    "SIM108", # ternary operator — often less readable in complex conditions
    "SIM117", # multiple with statements — parenthesized form is clearer in Python 3.10+
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── bandit ────────────────────────────────────────────────────────────────────
[tool.bandit]
targets = ["src"]
exclude_dirs = [".venv311", "models", "data", "scripts"]
skips = [
    # B305: ECB cipher mode — required by Lingxing ERP API (src/mcp/servers/erp/lingxing/auth.py).
    #       We do not choose this cipher; the external API mandates it.
    "B305",
    # B324: MD5 hash — used exclusively for non-security purposes:
    #         • cache-key generation in workflow definitions (short content IDs)
    #         • API request signatures mandated by TikTok and SellerSprite protocols
    #       No user passwords or sensitive data are hashed with MD5 in this codebase.
    "B324",
]
